Fixed alignment on lead__caption on 1024 screen widt devices

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -21,7 +21,7 @@
 @media screen and (max-width: 768px) {
   .footer {
     max-width: 720px;
-    margin-top: 88px;
+    margin: 88px 24px 0;
   }
 }
 
