--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -3,16 +3,10 @@
   font-weight: 400;
   font-size: 10px;
   color: #fff;
-  margin-left: calc((100% - 984px) / 2);
+  /*margin-left: calc((100% - 984px) / 2);*/
   line-height: 1.4;
   letter-spacing: 0.15em;
   margin-top: 8px;
-}
-
-@media screen and (max-width: 1024px) {
-  .lead__caption {
-    margin-left: 48px;
-  }
 }
 
 @media screen and (max-width: 768px) {
